fix: image position on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -15,6 +15,14 @@ figcaption p {
 
 figure {
 	text-align: center;
+	margin: 0px;
+}
+
+@media (max-width: 480px) {
+	img {
+			width: 100%;
+			height: auto;
+	}
 }
 
 /* Image hover effect */
